# api-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.github/workflows/: test.yml
deploy/: Caddyfile.dev  Caddyfile.example  vordr.compose.toml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs  service.rs
tests/: integration_tests.rs
