[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.10", features = ["full"] }
regex = "1.7.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
