[package]
name = "vordr"
version = "0.2.0"
edition = "2024"
description = "A small, single-binary API gateway for local development and small-scale deployments"
license = "MIT"

[lib]
name = "vordr"
path = "src/lib.rs"

[[bin]]
name = "vordr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
hyper = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "webpki-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tower-http = { version = "0.7", features = ["propagate-header", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde_json = "1"
